# Plasma

./: CMakeLists.txt  FFT.cpp  FFT.h  FFT_For_Any_n.cpp  Makefile  Pars.config  Pars2.config  Pars3.config  Pars4.config  Plasma  Plasma.cpp  Plasma_funcs.cpp  Plasma_funcs.h  README.md  plasma.py
